--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 body
 {
-  background-image:url('./img/background.jpg');
+  background-image:url('./background.jpg');
   border: 0;
     padding: 0;
     min-height: 100%;
