--- a/africaphoto.html
+++ b/africaphoto.html
@@ -74,7 +74,7 @@ td {
      <a href="africaanimal.html" target="if_a">ANIMAL<br><br></a>
      <a href="africaenjoy.html" target="if_a">ENJOY</a>
          </td>
-     <td width="900"><h3><span style="color:white">Windhoek</span></h3><span style="color:white">빈트후크<br><br><img src='./Windhoek.jpg' width='700'><br>
+     <td width="900"><h3><span style="color:white">Windhoek</span></h3><span style="color:white">빈트후크<br><br><img src='./windhoek.jpg' width='700'><br>
        <br><br>
        <span style="color:white">
           나미비아의 수도인 빈트후크에는 예쁜 이름의 길들이 있습니다. <br><br>
@@ -82,7 +82,7 @@ td {
         또한, 빨간 지붕의 루터 교회인 크리스투스키르헤부터 나미비아 남부지역인 기베온에 떨어진  <br> <br>
         45억 살의 기베온 운석이 전시되어 있기도 하며 국립 박물관인 알테 페스테에서는 이곳의 문화를 엿볼 수 있습니다.</span>  <br><br> <br><br><br>
 
-        <h3><span style="color:white">Etosha National Park</span></h3><span style="color:white">에토샤 국립공원<br><br><img src='./Etosha.jpg' width='700'><br>
+        <h3><span style="color:white">Etosha National Park</span></h3><span style="color:white">에토샤 국립공원<br><br><img src='./etosha.jpg' width='700'><br>
           <br><br>
           <span style="color:white">
              나미비아의 수도인 빈트후크에는 예쁜 이름의 길들이 있습니다. <br><br>
