--- a/africaphoto.html
+++ b/africaphoto.html
@@ -74,7 +74,7 @@ td {
      <a href="africaanimal.html" target="if_a">ANIMAL<br><br></a>
      <a href="africaenjoy.html" target="if_a">ENJOY</a>
          </td>
-     <td width="900"><h3><span style="color:white">Windhoek</span></h3><span style="color:white">빈트후크<br><br><img src='./windhoek.jpg' width='700'><br>
+     <td width="900"><h3><span style="color:white">Windhoek</span></h3><span style="color:white">빈트후크<br><br><img src='./Windhoek.jpg' width='700'><br>
        <br><br>
        <span style="color:white">
           나미비아의 수도인 빈트후크에는 예쁜 이름의 길들이 있습니다. <br><br>
