--- a/malaysiaphoto.html
+++ b/malaysiaphoto.html
@@ -74,7 +74,7 @@ td {
      <a href="malaysiaenjoy.html" target="if_a">ENJOY<br><br></a>
          </td>
      <td width="900"><h3><span style="color:white"> Kota Kinabalu</span></h3><span style="color:white">코타키나발루<br><br>
-       <img src='./KotaKinabalu.jpg' width='700'><br><img src='./KotaKinabalu2.jpg' width='700'>
+       <img src='./kotakinabalu.jpg' width='700'><br><img src='./kotakinabalu2.jpg' width='700'>
        <br>
        <br><br><br><br>
        <span style="color:white">
