--- a/malaysiaenjoy.html
+++ b/malaysiaenjoy.html
@@ -61,7 +61,7 @@ td {
   &nbsp;&nbsp;&nbsp; <a href="bucket.html" target="if_a">Bucket list</a> &nbsp;&nbsp;&nbsp;
   </span>
   <br>  <br>  <br>
-  <img src='./Monkey.png' width='100'>
+  <img src='./monkey.png' width='100'>
 
   </div>
 </center>
@@ -74,7 +74,7 @@ td {
      <a href="malaysiaenjoy.html" style="color:#006400;" target="if_a">ENJOY<br><br></a>
          </td>
      <td width="900"><h3><span style="color:white"><a href="https://www.myrealtrip.com/offers/18585"  target="if_a"> Hoping Tour</a></span></h3><span style="color:white">호핑투어<br><br>
-       <img src='./Hope.jpg' width='700'>
+       <img src='./hope.jpg' width='700'>
        <br>
        <br><br><br><br>
        <span style="color:white">
