--- a/winterp.html
+++ b/winterp.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><!-- 21961036_남예지 -->
 <html lang="en" dir="ltr">
   <head>
+    <mata name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="utf-8">
     <title></title>
     <style>
